--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,5 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<a>This site uses your Google sign-in details such as ID, Email, Profile Image and Name.</a>
-<p>This is done on a session basis, logging on grants access to our database.</p>
+<a>This site uses your Google sign-in details such as ID, Email, Profile Image and Name. This is done on a session basis, logging on grants access to our database. Alterantivly you can log on locally. We will store your email and password securly.</a>
