--- a/Views/Planes/Index.cshtml
+++ b/Views/Planes/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Meridian_Line_Travel.Models.Planes>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Database";
 }
 
-<h1>Index</h1>
+<h1>Database</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
