--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,7 @@
                 <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
         </li>
-        <a class="text-dark" href="" onclick="signOut();">Sign Out</a>
+        <a class="nav-link text-dark" href="" onclick="signOut();">Sign Out</a>
         <script>
             function signOut() {
                 var auth2 = gapi.auth2.getAuthInstance();
