--- a/Views/Planes/Create.cshtml
+++ b/Views/Planes/Create.cshtml
@@ -14,51 +14,67 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="PlaneID" class="control-label"></label>
+                - This is the General ID
                 <input asp-for="PlaneID" class="form-control" />
                 <span asp-validation-for="PlaneID" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="IDName" class="control-label"></label>
+                - MLT
+                <input asp-for="IDName" class="form-control" />
+                <span asp-validation-for="IDName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="PlaneIDNum" class="control-label"></label>
+                - ID number for the Plane
                 <input asp-for="PlaneIDNum" class="form-control" />
                 <span asp-validation-for="PlaneIDNum" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SeatingCapacity" class="control-label"></label>
+                - Number of seats on the Plane
                 <input asp-for="SeatingCapacity" class="form-control" />
                 <span asp-validation-for="SeatingCapacity" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Assignment" class="control-label"></label>
+                - Is there a flight for this plane (Y/N)
                 <input asp-for="Assignment" class="form-control" />
                 <span asp-validation-for="Assignment" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AoO" class="control-label"></label>
+                - Airport of Origin
                 <input asp-for="AoO" class="form-control" />
                 <span asp-validation-for="AoO" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AoD" class="control-label"></label>
+                - Airport of Destination
                 <input asp-for="AoD" class="form-control" />
                 <span asp-validation-for="AoD" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FlightID" class="control-label"></label>
+                - MLT
                 <input asp-for="FlightID" class="form-control" />
                 <span asp-validation-for="FlightID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FlightIDNum" class="control-label"></label>
+                - ID number for the Flight
                 <input asp-for="FlightIDNum" class="form-control" />
                 <span asp-validation-for="FlightIDNum" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
+                - Is it a Jet Engine or a Turbo Prop
                 <input asp-for="Type" class="form-control" />
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PlaneName" class="control-label"></label>
+                - The Model of Plane
                 <input asp-for="PlaneName" class="form-control" />
                 <span asp-validation-for="PlaneName" class="text-danger"></span>
             </div>
