--- a/Views/Planes/Index.cshtml
+++ b/Views/Planes/Index.cshtml
@@ -14,6 +14,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.IDName)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.PlaneIDNum)
             </th>
             <th>
@@ -46,6 +49,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.IDName)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PlaneIDNum)
             </td>
